<resources>
    <string name="app_name">HydrationApp</string>
    <string name="first_time">Tell me about your hydration plan!</string>
    <string name="developer">Developed by Anubhab Majumdar</string>
    <string name="hydration_data">Hydration data</string>

    <string name="general">General</string>
    <string name="start_day_key">start_day</string>
    <string name="end_day_key">end_day</string>
    <string name="display_name_key">display_name</string>
    <string name="notification_state_key">notification</string>
    <string name="ringtone_key">ringtone</string>
    <string name="vibration_key">vibration</string>
    <string name="waterConsumptionStack_key">waterConsumptionStack</string>
    <string name="drink_broadcast">drinkBroadcast</string>


    <string name="notification_default">15</string>
    <string name="glass_size_default">150</string>
    <string name="quantity_default">2.5</string>
    <string name="totalWaterConsumption_default">0</string>
    <string name="default_ringtone">content://settings/system/notification_sound</string>

    <string name="reset_name">Reset</string>
    <string name="undo_name">Undo</string>

    <string name="state_key">state</string>
    <string name="state_default">initial</string>
    <string name="state_ready">ready</string>
    <string name="state_set">set</string>

    <string name="appReset">reset</string>
    <string name="setNextNotification">next_notification</string>

    <string name="bigText_glass">Drink!</string>
    <string name="drink_water">NotificationDrinkWaterService</string>
    <string name="bigText_updatePiechart">updatePiechart</string>

    <string name="timepicker_state">timepicker_state</string>
    <string name="timepicker_start">start</string>
    <string name="timepicker_end">end</string>

    <string name="notification_state">notification_state</string>
    <string name="normal_notification">Notification with sound</string>
    <string name="silent_notification">Silent notification</string>
    <string name="no_notification">No notification</string>


    <string name="start_hour">start_hour</string>
    <string name="start_min">start_min</string>
    <string name="end_hour">end_hour</string>
    <string name="end_min">end_min</string>
    <string name="notification_interval">notification_interval</string>
    <string name="quantity">quantity</string>
    <string name="glass_size">glass_size</string>
    <string name="total_consumption">total_consumption</string>


    <string-array name="notification_interval_array_name">
        <item>1 min</item>
        <item>15 min</item>
        <item>20 min</item>
        <item>30 min</item>
        <item>40 min</item>
        <item>60 min</item>
    </string-array>
    <string-array name="notification_interval_array">
        <item>1</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>60</item>
    </string-array>
    <string-array name="glass_size_array_name">
        <item>100 ml</item>
        <item>150 ml</item>
        <item>200 ml</item>
        <item>300 ml</item>
        <item>400 ml</item>
        <item>500 ml</item>
    </string-array>
    <string-array name="glass_size_array">
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
    </string-array>

    <string-array name="notification_array">
        <item>@string/normal_notification</item>
        <item>@string/silent_notification</item>
        <item>@string/no_notification</item>
    </string-array>

    <string-array name="notification_name_array">
        <item>normal</item>
        <item>silent</item>
        <item>no</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
